front-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: front
  name: front
spec:
  replicas: 1
  selector:
    matchLabels:
      app: front
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: front
    spec:
      containers:
        - image: harunari/financial_analysis_frontend:stable
          name: frontend-server
          ports:
            - containerPort: 80
          resources: {}
      restartPolicy: Always
status: {}
