rdb-primary-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rdb-primary
  labels:
    app: rdb-primary
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rdb-primary
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: rdb-primary
    spec:
      containers:
        - name: rdb-primary
          image: harunari/financial_report_primary_database:stable-331
          ports:
            - containerPort: 5432
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 256Mi
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: primary-database
              subPath: postgres
      restartPolicy: Always
      volumes:
      - name: primary-database
        persistentVolumeClaim:
          claimName: auto-trade-storage
status: {}
