rdb-primary-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rdb-primary-service
  labels:
    app: rdb-primary
spec:
  selector:
    app: rdb-primary
  ports:
    - name: "5432"
      port: 5432
      targetPort: 5432
status:
  loadBalancer: {}
